# swparse

./: .env.dev  .env.docker.example  .env.example  .env.infra.example  .env.local.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  RELEASE.md  docker-build.sh  docker-compose.cpu.yml  docker-compose.dev.yaml  docker-compose.infra.yml  docker-compose.override.yml  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  entry.sh  example.ipynb  nixpacks.toml  output.md  plan.md  pyproject.toml  start-dev.sh  start-prod.sh  start.cpu.sh  start.dev.sh  start.sh  test.md
.github/workflows/: sq-scan.yml
deploy/caddy/: Caddyfile
deploy/docker/dev/: Dockerfile
deploy/docker/run/: Dockerfile  Dockerfile.distroless
scripts/: post-builds.py
src/swparse/: __main__.py  app.py  asgi.py  convert.py  model.py  parse.py  settings.py  tasks.py  utils.py
src/swparse/cli/: commands.py
src/swparse/config/: app.py  base.py  constants.py
src/swparse/db/migrations/: alembic.ini
src/swparse/db/migrations/versions/: 2024-10-12_added_new_models_extraction_and_document_aec2d89e9634.py  2024-10-14_add_document_model_7dcce9f4c7d2.py  2024-10-14_add_document_model_938c1f80c011.py  2024-10-15_update_extrated_file_path_in_document__d6f01f22f1ee.py  2024-10-17_changed_extracted_file_path_data_type__69e3317698cd.py  2024-10-22_allow_none_type_and_nullable_to__17ce0643f378.py  2024-10-22_changed_data_type_of_extracted_file__b960bc7ff8a5.py  2024-11-01_create_a_new_model_apikey_3068a5423908.py  2024-11-04_add_extractions_table_d3ec098c01e1.py  2024-11-05_add_document_id_in_extractions_ce4f4d09873f.py  2024-11-05_make_extracted_file_paths_non_nullable_d73e67ade15d.py  2024-12-10_updated_the_status_field_of_api_key_to__6edf860d5793.py
src/swparse/db/models/: __init__.py  api_keys.py  content_type.py  document.py  extraction.py  file_types.py  team_invitation.py
src/swparse/domain/accounts/: __init__.py  dependencies.py  guards.py  repositories.py  schemas.py  services.py  signals.py  urls.py
src/swparse/domain/accounts/controllers/: __init__.py  access.py  api_key.py  roles.py  user_role.py  users.py
src/swparse/domain/documents/: controller.py  dependencies.py  repositories.py  schemas.py  services.py  urls.py
src/swparse/domain/extractions/: controller.py  dependencies.py  repositories.py  schemas.py  services.py  urls.py
src/swparse/domain/swparse/: __init__.py  controllers.py  convert.py  guards.py  html_renderer.py  llama_json_renderer.py  middlewares.py  old_convert.py  old_html_renderer.py  schema.py  schemas.py  tasks.py  urls.py  utils.py
src/swparse/domain/system/: controllers.py  schemas.py
src/swparse/domain/tags/: controllers.py  dependencies.py  dtos.py  repositories.py  services.py
src/swparse/domain/teams/: dependencies.py  guards.py  repositories.py  schemas.py  services.py  signals.py
src/swparse/domain/teams/controllers/: team_invitation.py  team_member.py  teams.py
src/swparse/lib/: dependencies.py
src/swparse/server/: builder.py  openapi.py  plugins.py  routers.py
tests/: __init__ .py  conftest.py  data_fixtures.py  simple.rtf  test.ipynb  test.md
tests/benchmark/: README.md  api_requset.ipynb  comparison_results.md  improvement_comparison.md  llama_request.ipynb  multi_workers.ipynb  statistics.md  time_taken(async).md  time_taken(s3fs).md
tests/benchmark/output/: 2024 Sales Presentation C6501-PPOs-1.md  2024SalesPresentationC6501-PPOs(force_ocr).md  2024SalesPresentationC6501-PPOs(plain_text).txt  2024SalesPresentationC6501-PPOs.md  CMS_AI_Playbook_3_Final(plain_text).txt  CMS_AI_Playbook_3_Final.md  My-Agreements-in-4i-Tip-Sheet_508-1(force_ocr).md  My-Agreements-in-4i-Tip-Sheet_508-1(plain_text).txt  My-Agreements-in-4i-Tip-Sheet_508-1.md
tests/benchmark/output(docling)/: 2024 Sales Presentation C6501-PPOs-1.md  CMS_AI_Playbook_3_Final.md  My-Agreements-in-4i-Tip-Sheet_508-1.md  time_taken_summary.md
tests/benchmark/output(force_ocr)/: CMS_AI_Playbook_3_Final.txt
tests/benchmark/output(markdown)/: 2024SalesPresentationC6501-PPOs.md  CMS_AI_Playbook_3_Final.md  My-Agreements-in-4i-Tip-Sheet_508-1.md
tests/benchmark/output(markitdown)/: 2024 Sales Presentation C6501-PPOs-1.md  CMS_AI_Playbook_3_Final.md  My-Agreements-in-4i-Tip-Sheet_508-1.md  time_taken_summary.md
tests/integration/: conftest.py  test_health.py  test_tests.py
tests/resources/: DimOrder.xlsx
tests/test/: demo_json.ipynb  html_renderer.py  llama_json.py  llama_json_renderer.py  marker.ipynb  old_marker.ipynb  test.ipynb  test.json
tests/test/chart/: new.md  new_meta.json
tests/test/html/: mine.html  test.html
tests/test/json/: hm3_pages.json  html_test.json.json  latest.json  latest_img.json  latest_pages.json  old_json.json  special.json  text.json
tests/test/md/: latest.md  test.md
tests/test/pdf/: output.pdf.md  output.pdf_meta.json
tests/test/samples/: image_json.json  link_json.json
tests/test/txt/: html_test.html  test.txt
tests/unit/: conftest.py
tests/unit/lib/: test_cache.py  test_crypt.py  test_dependencies.py  test_exceptions.py  test_settings.py
