[project]
authors = [{ name = "Phyo Arkar Lwin", email = "phyoakl@hexcode.tech" }]
dependencies = [
    "litestar[full]>=2.11",
    "advanced-alchemy==0.26.2",
    "asyncpg>=0.28.0",
    "python-dotenv>=1.0.0",
    "passlib[argon2]>=1.7.4",
    "litestar-saq>=0.1.3",
    "litestar-granian>=0.1.4",
    "aiosqlite>=0.19.0",
    "httptools",
    "setuptools>=70.3.0",
    "pip>=24.1.2",
    "premailer>=3.10.0",
    "openpyxl>=3.1.5",
    "filetype>=1.2.0",
    "transformers==4.45.2",
    "streamlit>=1.36.0",
    "marker-pdf==1.3.3",
    "pillow>=10.4.0",
    "llama-parse>=0.5.7",
    "mammoth>=1.8.0",
    "openpyxl>=3.1.5",
    "surya-ocr==0.10.0",
    "html2text>=2024.2.26",
    "markdownify>=0.13.1",
    "xls2xlsx>=0.2.0",
    "nest-asyncio>=1.6.0",
    "mistletoe>=1.4.0",
    "html-text>=0.6.2",
    "markdown>=3.7",
    "unoserver>=3.0.1",
    "rich>=13.9.3",
    "python-pptx>=1.0.2",
    "snakemd>=2.2.0",
    "lark>=1.2.2",
    "gliner>=0.2.13",
    "nltk>=3.9.1",
    "markdown-it-py>=3.0.0",
    "mdit-plain>=1.0.1",
    "pymupdf>=1.25.1",
    "psutil>=6.1.1",
    "uuid-utils>=0.10.0",
    "botocore>=1.35.81",
    "aioboto3>=13.3.0",
    "datasets>=3.2.0",
]
description = "SWParse: SkyWard's smart multidocument parser for RAG"
keywords = ["litestar", "sqlalchemy", "alembic", "fullstack", "api", "asgi", "litestar", "vite", "spa"]
license = { text = "BUSINESS" }
name = "swparse"
readme = "README.md"
requires-python = "==3.12.*"
version = "0.7.8"

# [project.urls]
# Discord = "https://discord.gg/litestar"
# Homepage = "https://github.com/skywarditsolutions/skwrdparse"
# Issue = "https://github.com/skywarditsolutions/skwrdparse/issues/"
# Source = "https://github.com/skywarditsolutions/skwrdparse"

[project.scripts]
swparse = "swparse.__main__:run_cli"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
dev-mode-dirs = ["src/"]
include = ["CHANGELOG.md", "src/swparse/**/*.sql", "src/swparse/lib/db/**/*.ini"]
packages = ["src/swparse"]

[tool.hatch.build.targets.swparse]

[tool.pdm.scripts]
lint = "pdm run pre-commit run --all-files"
start-infra = "docker compose -f docker-compose.infra.yml up --force-recreate -d"
stop-infra = "docker compose -f docker-compose.infra.yml down --remove-orphans"
test = "pdm run pytest tests"
test_coverage = { composite = ["pdm run pytest tests", "pdm run coverage html", "pdm run coverage xml"] }

[tool.pdm.dev-dependencies]
dev = ["commitizen>=3.29.1"]
docs = [
  "sphinx>=7.2.6",
  "commitizen>=3.30.0",
  "sphinx-autobuild>=2021.3.14",
  "sphinx-copybutton>=0.5.2",
  "sphinx-toolbox>=3.5.0",
  "sphinx-design>=0.5.0",
  "sphinx-click>=5.0.1",
  "sphinxcontrib-mermaid>=0.9.2",
  "litestar-sphinx-theme @ git+https://github.com/litestar-org/litestar-sphinx-theme.git",
]
linting = [
  "pre-commit>=3.4.0",
  "mypy>=1.5.1",
  "ruff>=0.0.287",
  "slotscheck",
  "types-click",
  "types-passlib",
  "types-python-jose",
  "types-pyyaml",
  "types-redis",
  "asyncpg-stubs",
  "pylint",
]
test = [
  "pytest",
  "pytest-xdist",
  "pytest-mock",
  "pytest-cov",
  "coverage",
  "pytest-sugar",
  "pytest-databases[postgres,redis]>=0.1.0",
]

[tool.commitizen]
tag_format = "v$version"
update_changelog_on_bump = true
version_provider = "pep621"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 120

[tool.coverage.report]
exclude_lines = [
  'if TYPE_CHECKING:',
  'pragma: no cover',
  "if __name__ == .__main__.:",
  'def __repr__',
  'if self\.debug:',
  'if settings\.DEBUG',
  'raise AssertionError',
  'raise NotImplementedError',
  'if 0:',
  'class .*\bProtocol\):',
  '@(abc\.)?abstractmethod',
]
omit = ["*/tests/*"]
show_missing = true

[tool.coverage.run]
branch = true
omit = ["tests/*", "**/*/migrations/**/*.py", "scripts/*"]

[tool.pytest.ini_options]
addopts = ["-ra", "--ignore", "migrations"]
# env_files = [".env.testing"]
# env_override_existing_values = 1
filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources",
  "ignore::DeprecationWarning:google.*",
  "ignore::DeprecationWarning:passlib.*",
  "ignore::DeprecationWarning:aiosql.*",
  "ignore::DeprecationWarning:litestar.constants.*",
  "ignore::DeprecationWarning:litestar.utils.*",
  "ignore::DeprecationWarning:litestar.cli.*",
  "ignore::DeprecationWarning:httpx._client",
]
testpaths = ["tests"]

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  '__pycache__',
  "src/swparse/db/migrations/versions/*.py",
]
fix = true
line-length = 120
lint.ignore = [
  "E501",    # pycodestyle line too long, handled by black
  "D100",    # pydocstyle - missing docstring in public module
  "D101",    # pydocstyle - missing docstring in public class
  "D102",    # pydocstyle - missing docstring in public method
  "D103",    # pydocstyle - missing docstring in public function
  "D104",    # pydocstyle - missing docstring in public package
  "D105",    # pydocstyle - missing docstring in magic method
  "D106",    # pydocstyle - missing docstring in public nested class
  "D107",    # pydocstyle - missing docstring in __init__
  "D202",    # pydocstyle - no blank lines allowed after function docstring
  "D205",    # pydocstyle - 1 blank line required between summary line and description
  "D415",    # pydocstyle - first line should end with a period, question mark, or exclamation point
  "UP037",   # pyupgrade - removes quotes from type annotation
  "A003",    # flake8-builtins - class attribute {name} is shadowing a python builtin
  "B010",    # flake8-bugbear - do not call setattr with a constant attribute value
  "B008",    #  flake8-bugbear - Do not perform function call `Parameter` in argument defaultsRuff(B008)
  "RUF012",  # ruff - mutable class attributes should be annotated with `typing.ClassVar`
  "ANN401",  # ruff - Dynamically typed expressions (typing.Any) are disallowed
  "ANN102",
  "ANN101",  # ruff - Missing type annotation for `self` in method
  "PLR0913", # ruff - Too many arguments to function call
  "PLR2004", # Magic value used in comparison
  "FBT001",  # Boolean typed positional argument in function definition
  "FBT002",  # Boolean default positional argument in function definition
  "FBT003",  # Boolean Boolean default positional argument in function definition
  "ARG002",  # Unused method argument
  "ARG001",  #  Unused function argument
  "TD002",
  "TD003",
  "FIX002",
  "PGH003",
  "RUF006",
  "SLF001",
  "PT007",
  'PT004',
  'PT005',
  'S603',
  "E501",    # pycodestyle line too long, handled by black
  "PLW2901", # pylint - for loop variable overwritten by assignment target
  "ANN401",
  "ANN102",
  "ANN101",
  "FBT",
  "PLR0913", # too many arguments
  "PT",
  "TD",
  "PERF203", # ignore for now; investigate
]
lint.select = ["ALL"]
lint.unfixable = ["F401"]
# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
src = ["src", "tests/"]
target-version = "py311"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
  "classmethod",
  "sqlalchemy.ext.declarative.declared_attr",
  "sqlalchemy.orm.declared_attr.directive",
  "sqlalchemy.orm.declared_attr",
]

[tool.ruff.lint.isort]
known-first-party = ['tests', 'swparse']

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ['D104', 'D103', 'D205', 'D212']
"__init__.py" = ['F401', 'D104']
"docs/**/*.*" = ["S", "B", "DTZ", "A", "TCH", "ERA", "D", "RET", "E731", "RUF012", "FA100", "ARG001"]
"docs/conf.py" = ["FIX002", "ARG001", "INP001"]
"scripts/**/*.*" = ["D", "ARG", "EM", "TRY", "G", "FBT", "INP001"]
"scripts/*.py" = ["INP001", "ERA001"]
"src/swparse/db/migrations/versions/*.py" = ["ANN201", "INP001"]
"tests/*.py" = ['D103', 'S101', 'D104']

[tool.slotscheck]
strict-imports = false

[tool.codespell]
ignore-words-list = "alog"
skip = 'pdm.lock, package-lock.json'

[tool.mypy]
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
exclude = '''(?x)(
^build/
|^dist/
|^.venv/
|^node_modules/
|^migrations/
)
'''
implicit_reexport = false
plugins = []
strict = true
warn_import-untyped = false
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
disallow_untyped_decorators = false
module = ["tests.*"]

[[tool.mypy.overrides]]
disallow_untyped_calls = false
disallow_untyped_decorators = false
module = ["aisoql.*"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["sqlalchemy.*", "saq.*", "uvicorn.*", "aiohttp.*", "jsbeautifier", "jsbeautifier.*", "uvloop", "uvloop.*"]

[[tool.mypy.overrides]]
ignore_errors = true
module = ["swparse.db.migrations.*", "swparse.lib.dto.*"]

[tool.pyright]
exclude = ["scripts", "docs"]
include = ["src/swparse", "tests"]
reportArgumentType = "information"
reportAssignmentType = "information"
reportAttributeAccessIssue = "information"
reportCallIssue = "information"
reportGeneralTypeIssues = "information"
reportIncompatibleMethodOverride = "information"
reportIncompatibleVariableOverride = "information"
reportMissingImports = "error"
reportMissingModuleSource = "error"
reportMissingTypeArgument = "information"
reportMissingTypeStubs = "information"
reportOperatorIssue = "information"
reportOptionalCall = "information"
reportOptionalMemberAccess = "information"
reportOptionalOperand = "information"
reportPossiblyUnboundVariable = "warning"
reportUnknownArgumentType = "information"
reportUnknownMemberType = "information"
reportUnknownParameterType = "information"
reportUnknownVariableType = "information"
reportUnsupportedDunderAll = "warning"
reportUntypedFunctionDecorator = "information"
reportUnusedVariable = "warning"
typeCheckingMode = "strict"
[tool.git-cliff.changelog]

footer = """
SWParse Changelog
"""
header = """
=========
Changelog
=========\n
All commits to this project will be documented in this file.\n
"""
trim = true

[tool.git-cliff.git]
commit_parsers = [
  { message = "^feat", group = "Features" },
  { message = "^fix", group = "Bug Fixes" },
  { message = "^doc", group = "Documentation" },
  { message = "^perf", group = "Performance" },
  { message = "^refactor", group = "Refactor" },
  { message = "^style", group = "Styling" },
  { message = "^test", group = "Testing" },
  { message = "^chore\\(release\\): prepare for", skip = true },
  { message = "^chore", group = "Miscellaneous Tasks" },
  { body = ".*security", group = "Security" },
]
conventional_commits = true
filter_commits = false
filter_unconventional = true
ignore_tags = ""
protect_breaking_commits = false
skip_tags = "v0.1.0-beta.1"
sort_commits = "oldest"
split_commits = false
tag_pattern = "v[0-9]*"
topo_order = false
